--- a/settings.json
+++ b/settings.json
@@ -1,3 +1,27 @@
 {
-    "repositories": {}
-}
+    "repositories": {
+        "6A-Realm/nx-reader": "202-05-25 22:25:50",
+        "Atmosphere-NX/Atmosphere": "222-04-29 23:15:04",
+        "CTCaer/hekate": "2022-10-12 9:31:31",
+        "HamletDuFromage/aio-switch-updater": "2022-09-25 11:44:52",
+        "J-D-K/JKSV": "2021-09-01 1:15:53",
+        "Team-Neptune/DeepSea-Assets": "2021-09-25 00:27:19",
+        "WerWolv/EdiZon": "2020-06-0 20:25:56",
+        "WerWolv/Tesla-Menu": "2022-5-11 19:35:17",
+        "WerWolv/nx-ovlloader": "200-05-05 20:24:01",
+        "WerWolv/ovl-sysmodules": "2021-07-06 20:39:47",
+        "cathery/sys-con": "2021-09-23 16:56:06",
+        "cathery/sys-ftpd-light": "2020-07-21 09:44:29",
+        "fortheusers/hb-appstore": "2019-12-23 22:52:13",
+        "joel16/NX-Shell": "2022-08-07 18:25:46",
+        "masagrator/Status-Monitor-Overlay": "2022-03-24 20:39:50",
+        "melonDS-emu/melonDS": "2022-02-08 13:42:02",
+        "mgba-emu/mgba": "2022-10-12 03:30:00",
+        "mrdude2478/TinWoo": "2022-05-05 15:43:16",
+        "ndeadly/MissionControl": "2022-10-05 21:59:57",
+        "olliz0r/sys-botbase": "2022-04-10 00:25:42",
+        "retronx-team/sys-clk": "2022-03-24 00:26:14",
+        "spacemeowx2/ldn_mitm": "222-04-13 10:38:21",
+        "suchmememanyskill/TegraExplorer": "2022-10-11 21:32:33",
+        "zaksabeast/CaptureSight": "222-03-18 15:33:41"
+    }}
